# BigInt

./: .gitignore  .travis.yml  BigInt.cpp  BigInt.h  BigInt_v2.mk  BigInt_v2.project  CMakeLists.txt  README.md  main.cpp  makefile  multiplication.cpp  operator.cpp  por_add.cpp  por_sub.cpp  valg_log
BigIntTester/: BigIntTester.mk  BigIntTester.project  BigIntTester.txt  README.md  include_test.h  includer.h  main.cpp  main.d  makefile  testing_main.cpp
BigIntTester/Debug/: BigIntTester  main.cpp.o.d  up_BigInt_v2_BigInt.cpp.o.d
BigIntTester/test_folder/: addition.cpp  addition.d  addition_diff_a.h  addition_diff_b.h  addition_same_a.h  addition_same_b.h  multiplication.cpp  multiplication.d  multiplication.h  por_add.d  por_add.h  por_sub.cpp  por_sub.d  por_sub.h  subtract_diff_a.h  subtract_diff_b.h  subtract_same_a.h  subtract_same_b.h  subtraction.cpp  subtraction.d  testing_catch2.cpp  testing_catch2.d
BigInt_v2/: BigInt_v2.mk  BigInt_v2.txt  README.md  main.cpp
BigInt_v2/Debug/: BigInt.cpp.o.d  BigInt_v2  main.cpp.o.d
BigInt_v2/Release/: BigInt_v2
BigInt_v3/: .gitignore  BigInt.cpp  BigInt.h  main.cpp  makefile  operator.cpp
Debug/: BigInt_v2
Release/: BigInt.cpp.o.d  main.cpp.o.d
tests/: addition.cpp  multiplication.cpp  subtraction.cpp
